assets/css/main.css
@charset "UTF-8";
html, body, div, span, applet, object, iframe,
h1, h2, h3, h4, h5, h6, p, blockquote, pre,
abbr, acronym, address, big, cite, code,
del, dfn, em, img, ins, kbd, q, s, samp,
small, strike, strong, tt, var,
b, u, i, center, a, details,
dl, dt, dd, ol, ul, li,
table, caption, tbody, tfoot, thead, tr, th, td,
article, aside, canvas, details, embed,
figure, figcaption, footer, header, hgroup,
menu, nav, output, ruby, section, summary,
time, mark, audio, video {
    margin: 0;
    padding: 0;
    border: 0;
    vertical-align: baseline;
}
/* HTML5 display-role reset for older browsers */
article, aside, details, figcaption, figure,
footer, header, hgroup, menu, nav, section {
    display: block;
}
h1 { font-size: 180%; }
h2 { font-size: 160%; }
h3 { font-size: 140%; }
h3 { font-size: 125%; }
h3 { font-size: 118%; }
h4 { font-size: 102%; }
h5 { font-size: 96%; }
h6 { font-size: 92%; }
body {
    font-family: sans-serif;
    line-height: 1;
}
table {
    border-collapse: collapse;
    border-spacing: 0;
}
:root {
    height: 100%;
}
body {
    background-color: var(--main-bg-color);
    color: var(--main-fg-color);
    min-height: 100%;
    display: grid;
    padding: 0 .8rem;
    grid-template-rows: auto minmax(min-content, 1fr) auto;
    grid-template-areas: "header" "main" "footer";
    grid-gap: .5rem;
}
main {
    max-width: 100%;
}
a {
    color: var(--main-link-color);
    text-decoration: none;
}
a:visited {
    color: var(--main-linkvisited-color);
}
a:hover {
    text-decoration: underline;
}
a[href="#"], a[href="#"]:visited {
    color: var(--main-fg-color);
    cursor: text;
    text-decoration: none;
}
.deg-45 {
    transform: rotate(45deg);
}
.h-mirror {
    transform: rotateX(180deg);
}
.v-mirror {
    transform: rotateY(180deg);
}
.h-mirror.v-mirror {
    transform: rotateY(180deg) rotateX(180deg);
}
svg.icon.icon-eraser {
    width: 1.4em;
    margin-left: -.2em;
}
.icon.icon-lock, .icon.icon-clock-o, .icon.icon-code, .icon.icon-github,
.icon.icon-angle-double-left, .icon.icon-angle-double-right, .icon.icon-adjust {
    vertical-align: text-top;
}
h1.logo a,
h1.logo a:visited {
    color: var(--main-fg-color);
    text-decoration: none;
}
body > header svg.icon {
    vertical-align: text-top;
}
body > header {
    display: grid;
    grid-template-columns: auto auto 5fr;
    grid-area: header;
    margin: .5rem 0 0 0;
}
body > header small {
    opacity: .7;
    font-weight: lighter;
}
body > header menu {
    padding-top: .72rem;
    margin-left: 1rem;
    text-align: right;
}
body > header menu.tabs {
    font-size: 1em;
}
.icon {
    vertical-align: middle;
}
menu li, nav ul, nav ul li, nav dl, nav dl dd, nav dl dt {
    display: inline-block;
}
body > header menu li:first-child::before,
body > header menu.tabs li::before {
    content: unset;
}
body > header menu {
    text-align: right;
    align-self: end;
    font-size: .8rem;
}
menu li a svg {
    height: 1rem;
    width: 1rem;
}
menu li a svg.icon-activitypub {
    width: 1.2rem;
    margin-left: .2rem;
}
body > main {
    grid-area: main;
}
body > footer {
    grid-area: footer;
    padding-bottom: 1em;
    text-align: right;
}
body > footer nav {
    margin-top: .5rem;
    float: left;
}
body > footer nav:not(.pagination) {
    float: right;
}
.deleted {
    opacity: .7;
}
.icon.icon-lock {
    transform: rotateX(180deg);
}
a[rel="mention"]::before,
a[rel="tag"]::before {
    opacity: .8;
    font-weight: bold;
}
a[rel="mention"]::before {
    content: "~";
}
a[rel="tag"]::before {
    content: "#";
}
footer time {
    text-decoration: underline dotted;
}
del {
    line-height: 2rem;
    padding-left: 2ex;
    letter-spacing: .3ex;
    font-weight: 100;
}
form label {
    min-height: 1.8rem;
    line-height: 1.8rem;
}
form label.mime-type {
    font-size: .8em;
    float: right;
}
dialog {
    width: 60%;
}
dialog button.close {
    width: 1.5em;
    height: 1.5em;
    padding: 0;
    font-size: .8em;
    margin-top: -1em;
    margin-right: -1em;
    float: right;
}
li footer nav ul li::before, nav ul li:first-child::before, nav dl dt:first-child::before {
    content: unset;
}
menu li::before, nav dl dt::before, nav ul li::before {
    content: "\22c5";
    padding: 0 .4em 0 .2em;
}
p {
    word-break: break-word;
}
@media (min-width: 2201px) {
    :root {
        font-size: .78vw;
    }
}
@media (max-width: 2200px) {
    :root {
        font-size: .86vw;
    }
}
@media (max-width: 1800px) {
    :root {
        font-size: 1.05vw;
    }
}
@media (max-width: 1500px) {
    :root {
        font-size: 1.16vw;
    }
}
@media (max-width: 1200px) {
    :root {
        font-size: 1.4vw;
    }
}
@media (max-width: 1050px) {
    :root {
        font-size: 1.6vw;
    }
}
@media (max-width: 948px) {
    :root {
        font-size: 1.8vw;
    }
}
@media (max-width: 860px) {
    :root {
        font-size: 2vw;
    }
    body > header menu a span {
        display: unset;
    }
}
@media (max-width: 768px) {
    :root {
        font-size: 2.4vw;
    }
    section footer nav li a:not([rel="bookmark"]),
    body > footer nav:not(.pagination),
    body > header menu a span,
    body > header menu:nth-of-type(2) li:not(.acct) {
        display: none;
    }
}
@media (max-width: 576px) {
    :root {
        font-size: 2.6vw;
    }
    section header h2 small,
    .logo a strong {
        display: none;
    }
}
@media (max-width: 480px) {
    :root {
        font-size: 3.6vw;
    }
    footer time svg,
    .logo a small {
        display: none;
    }
}

